--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+  paths-ignore:
+   - 'README.md'
 
 jobs:
   run-check-tests:
@@ -15,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup containers
         run: |
-          docker compose up -d
+          docker compose up -d --quiet-pull
       - name: Check format
         run: |
           docker compose exec -u root api ruff check src/
