paths-ignoreの記述修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,15 @@ name: Check and Tests
 
 on:
   pull_request:
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE'
   push:
     branches:
       - main
-  paths-ignore:
-   - 'README.md'
+    paths-ignore:
+      - 'README.md'
+      - 'LICENSE'
 
 jobs:
   run-check-tests:
