--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - neme: Setup docker buildx
+      - name: Setup docker buildx
         uses: docker/setup-buildx-action@v3
       - name: Cache docker layers
         uses: docker/build-push-action@v6
