--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install the project
         run: uv sync --all-extras --dev
       - name: Check format
-        run: uv run ruff check arc/
+        run: uv run ruff check src/
       - name: Check types
         run: uv run mypy src
   test:
