--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v5
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
@@ -34,10 +34,21 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
+    env:
+      TEST_DB_HOST: localhost
+      TEST_DB_PORT: 3307
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup containers
-        run: docker compose up -d --quiet-pull
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: ".python-version"
+      - name: Install the project
+        run: uv sync --all-extras --dev
+      - name: Setup DB container 
+        run: docker compose up -d --quiet-pull --wait test_db
       - name: Run tests
-        run: docker compose exec -u root api pytest
+        run: uv run pytest
