テスト/DB設定の修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install uv
+      - name: Setup uv
         uses: astral-sh/setup-uv@v5
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
-      - name: Install the project
-        run: uv sync --all-extras --dev
+      - name: Install python packages
+        run: uv sync --all-extras
       - name: Check format
         run: uv run ruff check src/
       - name: Check types
@@ -34,21 +34,21 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
-    env:
-      TEST_DB_HOST: localhost
-      TEST_DB_PORT: 3307
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install uv
+      - name: Setup uv
         uses: astral-sh/setup-uv@v5
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
-      - name: Install the project
-        run: uv sync --all-extras --dev
+      - name: Install python packages
+        run: uv sync --all-extras
       - name: Setup DB container 
         run: docker compose up -d --quiet-pull --wait test_db
       - name: Run tests
         run: uv run pytest
+        env:
+          TEST_DB_HOST: localhost
+          TEST_DB_PORT: 3307
