--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,4 +48,4 @@ format = "ruff format src/"
 check = "mypy src"
 buildapp = "docker compose build api"
 loginapp = "docker compose exec api bash"
-openapi = "python -m src.generate_openapi"
+openapi = "python -m src.generate_openapi > openapi.json"
