openapiチェック処理修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,7 @@ jobs:
       - name: Check types
         run: uv run mypy src
       - name: Check openapi.json
-        run: |
-          uv run python -m src.generate_openapi > /tmp/openapi.json
-          diff ./openapi.json /tmp/openapi.json
+        run: diff ./openapi.json <(uv run python -m src.generate_openapi)
   test:
     name: Run tests
     runs-on: ubuntu-latest
