--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,4 @@ check = "mypy . ; bandit --quiet --recursive src"
 buildapp = "docker compose build api"
 loginapp = "docker compose exec api bash"
 openapi = "python -m src.generate_openapi > openapi.json"
+buildprodapp = "docker build -t $(basename $PWD)-prod-app --target prod-app -f ./docker/api/Dockerfile ."
