--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.14.15
         with:
+          usedocker: true
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
           appdir: "api"
-          usedocker: true
+          dontuseforce: true
