--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,35 @@ jobs:
         run: uv run pytest
         env:
           TEST_DB_HOST: localhost
+  deploy:
+    name: Run deploy
+    runs-on: ubuntu-latest
+    needs:
+      - check
+      - test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          target: prod-app
+          file: ./docker/api/Dockerfile
+          load: true
+          tags: app:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Install Heroku CLI
+        run: |
+          curl https://cli-assets.heroku.com/install.sh | sh
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.14.15
+        with:
+          usedocker: true
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          appdir: "api"
