--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -1,5 +1,7 @@
+## Dockerfile for local
+
 ## ----- Stage for building python packages base
-FROM python:3.13 AS base-builder
+FROM python:3.13 AS builder
 
 # uv(Pythonパッケージマネージャ)インストール
 RUN pip3 install uv
@@ -8,17 +10,10 @@ ENV UV_COMPILE_BYTECODE=1
 
 # Pythonモジュールのインストール
 COPY pyproject.toml uv.lock ./
-
-## ----- Stage for building python packages dev
-FROM base-builder AS dev-builder
 RUN uv sync --frozen
 
-## ----- Stage for building python packages prod
-FROM base-builder AS prod-builder
-RUN uv sync --no-dev --frozen
-
 ## ----- Stage for web app base
-FROM python:3.13-slim AS base-app
+FROM python:3.13-slim AS app
 
 # ポート指定
 EXPOSE 8000
@@ -45,12 +40,9 @@ ARG USER=app
 RUN groupadd -o -g 1000 ${USER} &&\
     useradd --create-home -u 1000 -g ${USER} ${USER}
 
-## ----- Stage for web app dev
-FROM base-app AS dev-app
-
 # ビルド済みのpythonモジュールをコピー
-COPY --from=dev-builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
-COPY --from=dev-builder /usr/local/bin /usr/local/bin
+COPY --from=builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
 
 # 実行ユーザ指定
 USER ${USER}
@@ -61,22 +53,3 @@ ENV PYTHONDONTWRITEBYTECODE=1
 
 # デフォルトの起動コマンド設定
 CMD ["uvicorn", "src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
-
-## ----- Stage for web app prod
-FROM base-app AS prod-app
-
-# ビルド済みのpythonモジュールをコピー
-COPY --from=prod-builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
-COPY --from=prod-builder /usr/local/bin /usr/local/bin
-
-# 実行ユーザ指定
-USER ${USER}
-# Pythonの標準出力内容をバッファリングせずにリアルタイムに反映させる
-ENV PYTHONUNBUFFERED=1
-# Pythonのコンパイル済みファイル(*.pyc)を作成しない
-ENV PYTHONDONTWRITEBYTECODE=1
-
-COPY . ${APP_HOME}
-
-# デフォルトの起動コマンド設定
-CMD ["uvicorn", "src.main:app", "--workers", "4", "--host", "0.0.0.0", "--port", "8000"]
