--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dev = [
     "pytest==8.3.*",
     "ruff==0.9.*",
     "taskipy==1.14.*",
-    "types-PyMySQL==1.1.0.*",
+    "types-passlib==1.7.*",
+    "types-PyMySQL==1.1.*",
 ]
 
 [tool.ruff]
