--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "passlib[bcrypt]==1.7.*",
     "PyMySQL==1.1.*",
     "pyjwt==2.10.*",
+    "python-dotenv==1.1.*",
     "python-multipart==0.0.*",
     "orjson==3.10.*",
     "sqlalchemy==2.0.*",
