--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "bookmark"
 version = "0.1.0"
 description = "Bookmark sample"
 readme = "README.md"
-requires-python = "==3.13.*"
+requires-python = "==3.13.3"
 dependencies = [
     "fastapi==0.115.*",
     "uvicorn[standard]==0.34.*",
