--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = "Bookmark sample"
 readme = "README.md"
 requires-python = "==3.13.7"
 dependencies = [
-    "fastapi==0.115.*",
+    "fastapi==0.118.*",
     "uvicorn[standard]==0.34.*",
-    "passlib[bcrypt]==1.7.*",
+    "pwdlib[bcrypt]==0.2.*",
     "PyMySQL==1.1.*",
     "pyjwt==2.10.*",
     "python-dotenv==1.1.*",
