--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,4 @@ check = "mypy . ; bandit --quiet --recursive src"
 buildapp = "docker compose build api"
 loginapp = "docker compose exec api bash"
 openapi = "python -m src.generate_openapi > openapi.json"
+packageupdate = "uv lock --upgrade && uv sync"
