--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ exclude = "^tests/"
 test = "docker compose exec api python -m pytest"
 format = "ruff format ./"
 check = "mypy . ; bandit --quiet --recursive src"
-buildapp = "docker compose build api"
-loginapp = "docker compose exec api bash"
+build_app = "docker compose build api"
+login_app = "docker compose exec api bash"
 openapi = "python -m src.generate_openapi > openapi.json"
-updatepackages = "uv lock --upgrade && uv sync"
+update_packages = "uv lock --upgrade && uv sync"
