feat(auth): リフレッシュトークンのブラックリスト機能を追加
- ブラックリストAPIを追加し、リフレッシュトークンをjtiまたはユーザー+ファミリーでブラックリストに追加・削除できるようにしました。
- Redisを使用してブラックリストを管理するためのTokenBlacklistServiceを実装しました。
- ブラックリストに追加されたトークンは再利用できないように制御されます。
- CI/CDの設定にRedisコンテナを追加しました。
- README.mdにRedisの情報を追加しました。
- OpenAPI仕様にブラックリストAPIのエンドポイントを追加しました。
- テストコードを追加し、ブラックリスト機能の正常系および異常系を検証しました。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install python packages
         run: uv sync --all-extras
       - name: Setup DB container
-        run: docker compose up -d --quiet-pull --wait db
+        run: docker compose up -d --quiet-pull --wait db redis
       - name: Run tests
         run: uv run pytest
         env:
