--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-multipart==0.0.*",
     "orjson==3.11.*",
     "sqlalchemy==2.0.*",
+    "redis==5.2.*",
 ]
 
 [dependency-groups]
