--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,4 @@ jobs:
         run: uv run pytest
         env:
           TEST_DB_HOST: localhost
+          REDIS_URL: redis://localhost:6379/0?decode_responses=True
