Redis URLのクエリパラメータ設定方法の改修

--- a/compose.yaml
+++ b/compose.yaml
@@ -13,7 +13,7 @@ services:
       DATABASE_PASSWORD: root
       DATABASE_NAME: app
       DATABASE_DEBUG: 1
-      REDIS_URL: redis://redis:6379/0?decode_responses=True
+      REDIS_URL: redis://redis:6379/0
       REDIS_FAIL_OPEN: 1
       REDIS_BLACKLIST_DEFAULT_TTL_DAYS: 14
     tty: true
